solve alignments

--- a/common.css
+++ b/common.css
@@ -179,20 +179,8 @@
         border-bottom: 1px black solid;
     }
 
-    .postmenu {
-        display: flex;
-        position: sticky;
-        top: 0px;
-        background-color: var(--white);
-        padding-top: var(--spacing);
-        width: 100%;
-        flex-direction: row;
-        justify-content: space-between;
-        gap: 16px;
-    }
-
-    .author{
-        display:none;
+    .columns > div:last-child {
+        padding-bottom: calc(var(--spacing)*2);
     }
 
     ul {
@@ -203,6 +191,10 @@
     footer {
         padding: calc(var(--spacing)*3) var(--spacing) calc(var(--spacing)*2) var(--spacing);
         margin: 0;
+    }
+
+    footer p {
+        text-align:center;
     }
 
     .index footer {
@@ -241,6 +233,17 @@
 
     nav p {
         margin-bottom: 0px;
+    }
+
+    .postmenu {
+        display: flex;
+        width: 100%;
+        flex-direction: row;
+        justify-content: space-between;
+    }
+
+    .author{
+        display:none;
     }
 
     /* animations */
